--------------------------
Darshan Release Change Log
--------------------------

Darshan-3.2.0-pre1
=============
* corrected pkgconfig path for darshan-util when using DESTDIR (reported by
  Matthew Curry)
* added support for non-MPI instrumenation to Darshan, using GCC
construct/destructor attributes for bootstrapping rather than
intercepting MPI_Init()/MPI_Finalize(). This mechanism only
works for Darshan's shared library instrumentation

Darshan-3.1.8
=============
* added dynamic trace triggering functionality, allowing Darshan to
  decide at runtime whether or not to trace specific files with DXT,
  with this decision based on triggers in a user-provided config file

Darshan-3.1.7
=============
* bug fix for handling DXT data in darshan-convert utility. Bug reported
  by Mahzad Khoshlessan.
* bug fix for darshan-parser backwards compatibility: Darshan logs generated
  by Darshan versions prior to 3.1.0 may have included stdio counters that
  were not properly up-converted.  Reported by Teng Wang.
* bug fix to MiB reported in I/O performance estimate of
  darshan-job-summary.pl when both posix and stdio access is present
* added wrapper for __open_2(), bug reported by Cormac Garvey in which open
  calls are not intercepted with some versions of glibc/gcc
* added an instrumentation module for the MDHIM key/val storage system
* added support for properly instrumenting dup(), fileno(), fdopen(), and
  rename() calls

Darshan-3.1.6
=============
* bug fix for linker failures caused when linking external libraries
that use MPI internally (e.g., PETSc). Reported by Bilel Hadri.
* bug fix in mapping of Darshan's MPI_File_read_all wrapper to the
  underlying MPI library call in dynamic linking case

Darshan-3.1.5
=============
* modify Darshan MPI instrumentation method to intercept both MPI and
  PMPI symbols to workaround MPI implementations that are calling
  PMPI routines directly (e.g., the Fortran bindings of OpenMPI2).
  Contributed in part by Chris Zimmer.