@@ -2,6 +2,10 @@
 Darshan Release Change Log
 --------------------------
 
+Darshan-3.2.0-pre2
+=============
+* silence stdout from darshan-job-summary.pl and remove --summary option
+
 Darshan-3.2.0-pre1
 =============
 * corrected pkgconfig path for darshan-util when using DESTDIR (reported by
